TAG: qcreports_db-6-0-14-2
DATE: 04/11/2019
STAFF: lec
CHANGES: TR13081/retire DMDD/qcr.shtml

TAG: qcreports_db-6-0-14-1
DATE: 04/03/2019
STAFF: lec
CHANGES: T12963/TR12763/Lit Triage
WF_GXD_secondary.py
WF_AP_Routed.py
WF_AP_NewAlleleNomenTag.py
WF_AP_Discard.py
GXD_Stats.py
GXD_Triage.sql
GXD_References.sql
BIB_MissingPDFs.sql
WF_SupplementalData.py
WF_AP_NewAlleleNomenTag.py : obsolete
GXD_EarlyPapers : obsolete

TAG: qcreports_db-6-0-13-17
DATE: 03/25/2019
STAFF: lec
CHANGES: TR13013/GXD_Stats.py/cumulative counts for HT

TAG: qcreports_db-6-0-13-16
DATE: 03/13/2019
STAFF: sc
CHANGES: TR13050 - qcr.shtml - added link in dataloads to omim_hpload index file

TAG: qcreports_db-6-0-13-15
TAG: qcreports_db-6-0-13-14
TAG: qcreports_db-6-0-13-13
TAG: qcreports_db-6-0-13-12
TAG: qcreports_db-6-0-13-11
DATE: 01/31/2019, 02/05/2019
STAFF: lec
CHANGES: 
TR13031/WF_AP_Discard.py
TR12968/GXD_LackingImages.py
no TR/GXD_WithdrawnMarker.py

TAG: qcreports_db-6-0-13-10
TAG: qcreports_db-6-0-13-9
DATE: 01/30/2019
STAFF: lec
CHANGES: TR13030/add date stamp to all GO reports

TAG: qcreports_db-6-0-13-8
DATE: 01/23/2019
STAFF: lec
CHANGES: TR13017/retire MouseCyc

TAG: qcreports_db-6-0-13-7
DATE: 12/21/2018
STAFF: lec
CHANGES: TR12981/qcr.shtml/MGI_GenoNoMarker link incorrect

TAG: qcreports_db-6-0-13-6
DATE: 11/26/2018
STAFF: sc
CHANGES: qcr.shtml - Added new emalload index page

TAG: qcreports_db-6-0-13-4
DATE: 09/20/2018
STAFF: sc
CHANGES: restructured and index added, AP version hangs
    on the test server:
1) BIB_StatusMismatch_GXD.sql
2) BIB_StatusMismatch_AP.sql

TAG: qcreports_db-6-0-13-3
DATE: 09/13/2018
STAFF: lec  
CHANGES: TR12953/add mp_emapaload to Data Loads section

TAG: qcreports_db-6-0-13-2
DATE: 09/10/2018
STAFF: lec  
CHANGES: TR12954/GXD_Images.py/add eNeuro

TAG: qcreports_db-6-0-13-1
DATE: 09/04/2018
STAFF: lec  
CHANGES: TR12734/GenFevah/Mouse Genome Project

TAG: qcreports_db-6-0-12-13
DATE: 08/29/2018
STAFF: lec
CHANGES: 